--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["parse", "to_string", "to_json"]
+default = ["parse", "display", "to_json"]
 parse = ["nom"]
-to_string = []
+display = []
 to_json = ["serde", "serde_json"]
 
 [dependencies]
@@ -25,4 +25,4 @@ structopt = "0.2"
 
 [[example]]
 name = "parser"
-required-features = ["to_json"]
+required-features = ["parse", "to_json"]
