--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,17 +8,17 @@ edition = "2018"
 
 [features]
 default = ["parse", "display", "to_json"]
-parse = ["nom"]
+parse = ["log", "nom"]
 display = []
 to_json = ["serde", "serde_json"]
 
 [dependencies]
+log = { version = "0.4", optional = true }
 nom = { version = "5", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 
 [dev-dependencies]
-log = "0.4"
 pretty_env_logger = "0.3"
 failure = "0.1"
 structopt = "0.2"
