--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,13 @@ edition = "2018"
 [features]
 default = ["parse", "display", "to_json"]
 parse = ["log", "nom"]
-display = []
+display = ["indented"]
 to_json = ["serde", "serde_json"]
 
 [dependencies]
 log = { version = "0.4", optional = true }
 nom = { version = "5", optional = true }
+indented = { version = "0.1", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 
