--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ serde_json = { version = "1.0", optional = true }
 pretty_env_logger = "0.3"
 failure = "0.1"
 structopt = "0.2"
+open = "1.3"
 
 [[example]]
 name = "parser"
